# dhvani

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  bench-latest.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: analysis.rs  dsp.rs  mix.rs  resample.rs  simd.rs
docs/: migration.md  performance.md  troubleshooting.md
docs/architecture/: overview.md
docs/decisions/: 001-f32-interleaved-internal.md  002-simd-via-std-arch.md  003-rt-safe-graph-design.md  004-pipewire-feature-gated.md
docs/development/: dependency-watch.md  roadmap.md  threat-model.md
docs/guides/: ffi.md  production.md  rt-safety.md  simd.md  testing.md
examples/: analysis.rs  graph.rs  midi.rs  mixing.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_analysis.rs  fuzz_biquad.rs  fuzz_convert.rs  fuzz_dsp.rs  fuzz_graph.rs  fuzz_midi.rs  fuzz_mix.rs  fuzz_noise_reduce.rs  fuzz_resample.rs
scripts/: bench-history.sh  version-bump.sh
src/: error.rs  ffi.rs  lib.rs
src/analysis/: beat.rs  chroma.rs  dynamics.rs  fft.rs  key.rs  loudness.rs  mod.rs  onset.rs  stft.rs  waveform.rs  zcr.rs
src/buffer/: convert.rs  dither.rs  mod.rs  ops.rs  resample.rs
src/capture/: mod.rs  pw.rs  record.rs
src/clock/: mod.rs
src/dsp/: automation.rs  biquad.rs  compressor.rs  deesser.rs  delay.rs  envelope.rs  eq.rs  gain_smoother.rs  graphic_eq.rs  lfo.rs  limiter.rs  mod.rs  noise_reduction.rs  oscillator.rs  pan.rs  reverb.rs  routing.rs  svf.rs
src/environment/: mod.rs
src/g2p/: mod.rs
src/graph/: mod.rs
src/mechanical/: mod.rs
src/meter/: mod.rs
src/midi/: mod.rs  routing.rs  v2.rs  voice.rs
src/simd/: aarch64.rs  mod.rs  x86.rs
src/tests/: mod.rs  proptest_tests.rs  serde_tests.rs
src/voice_synth/: bhava_bridge.rs
supply-chain/: config.toml
