[package]
name = "nada-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nada]
path = ".."
features = []
default-features = false

[[bin]]
name = "fuzz_mix"
path = "fuzz_targets/fuzz_mix.rs"
doc = false

[[bin]]
name = "fuzz_resample"
path = "fuzz_targets/fuzz_resample.rs"
doc = false

[[bin]]
name = "fuzz_dsp"
path = "fuzz_targets/fuzz_dsp.rs"
doc = false

[[bin]]
name = "fuzz_biquad"
path = "fuzz_targets/fuzz_biquad.rs"
doc = false

[[bin]]
name = "fuzz_midi"
path = "fuzz_targets/fuzz_midi.rs"
doc = false

[[bin]]
name = "fuzz_analysis"
path = "fuzz_targets/fuzz_analysis.rs"
doc = false

[[bin]]
name = "fuzz_convert"
path = "fuzz_targets/fuzz_convert.rs"
doc = false

[[bin]]
name = "fuzz_graph"
path = "fuzz_targets/fuzz_graph.rs"
doc = false

[[bin]]
name = "fuzz_noise_reduce"
path = "fuzz_targets/fuzz_noise_reduce.rs"
doc = false
